--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ObertEvaluationProject</title>
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiYfysdWzUtJccboDFytNRoDCiuzv2IO0"></script>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
